src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_reflection_pad3d_backward(value grad_output, value self, value padding);
value atg_reflection_pad3d_backward_grad_input(value grad_input, value grad_output, value self, value padding);
value atg_reflection_pad3d_out(value out, value self, value padding);
value atg_relu(value self);
value atg_relu6(value self);
value atg_relu6_(value self);
value atg_relu_(value self);
value atg_relu_out(value out, value self);
value atg_remainder(value self, value other);
value atg_remainder_(value self, value other);
value atg_remainder_scalar_out(value out, value self, value other);
value atg_remainder_scalar_tensor(value self, value other);
value atg_remainder_scalar_tensor_out(value out, value self, value other);
value atg_remainder_tensor(value self, value other);
value atg_remainder_tensor_(value self, value other);
value atg_remainder_tensor_out(value out, value self, value other);
value atg_renorm(value self, value p, int64_t dim, value maxnorm);
value atg_renorm_(value self, value p, int64_t dim, value maxnorm);
value atg_renorm_out(value out, value self, value p, int64_t dim, value maxnorm);
value atg_repeat(value self, value repeats);
value atg_repeat_interleave(value repeats, value output_size);
value atg_repeat_interleave_self_int(value self, int64_t repeats, value dim, value output_size);
value atg_repeat_interleave_self_tensor(value self, value repeats, value dim, value output_size);
value atg_repeat_interleave_tensor_out(value out, value repeats, value output_size);
value atg_repeat_out(value out, value self, value repeats);
value atg_replication_pad1d(value self, value padding);
value atg_replication_pad1d_backward(value grad_output, value self, value padding);
value atg_replication_pad1d_backward_grad_input(value grad_input, value grad_output, value self, value padding);
value atg_replication_pad1d_out(value out, value self, value padding);
value atg_replication_pad2d(value self, value padding);
value atg_replication_pad2d_backward(value grad_output, value self, value padding);
value atg_replication_pad2d_backward_grad_input(value grad_input, value grad_output, value self, value padding);
value atg_replication_pad2d_out(value out, value self, value padding);
value atg_replication_pad3d(value self, value padding);
value atg_replication_pad3d_backward(value grad_output, value self, value padding);
value atg_replication_pad3d_backward_grad_input(value grad_input, value grad_output, value self, value padding);
value atg_replication_pad3d_out(value out, value self, value padding);
value atg_requires_grad_(value self, int requires_grad);
value atg_reshape(value self, value shape);
value atg_reshape_as(value self, value other);
value atg_resize(value self, value size);
value atg_resize_(value self, value size);
value atg_resize_as(value self, value the_template);
value atg_resize_as_(value self, value the_template);
value atg_resize_as_out(value out, value self, value the_template);
value atg_resize_as_sparse(value self, value the_template);
value atg_resize_as_sparse_(value self, value the_template);
value atg_resize_as_sparse_out(value out, value self, value the_template);
value atg_resize_out(value out, value self, value size);
value atg_resolve_conj(value self);
value atg_resolve_neg(value self);
value atg_retains_grad(value self);
value atg_rms_norm(value input, value normalized_shape, value weight, value eps);
value atg_rnn_relu(value input, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg_rnn_relu_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh);
value atg_rnn_relu_data(value data, value batch_sizes, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
value atg_rnn_tanh(value input, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg_rnn_tanh_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh);
value atg_rnn_tanh_data(value data, value batch_sizes, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
value atg_roll(value self, value shifts, value dims);
value atg_roll_out(value out, value self, value shifts, value dims);
value atg_rot90(value self, int64_t k, value dims);
value atg_rot90_out(value out, value self, int64_t k, value dims);
value atg_round(value self);
value atg_round_(value self);
value atg_round_decimals(value self, int64_t decimals);
value atg_round_decimals_(value self, int64_t decimals);
value atg_round_decimals_out(value out, value self, int64_t decimals);
value atg_round_out(value out, value self);
value atg_row_indices(value self);
value atg_row_indices_copy(value self);
value atg_row_indices_copy_out(value out, value self);
value atg_row_stack(value tensors);
value atg_row_stack_out(value out, value tensors);
value atg_rrelu(value self, value lower, value upper, int training);
value atg_rrelu_(value self, value lower, value upper, int training);
value atg_rrelu_with_noise(value self, value noise, value lower, value upper, int training);