src/bindings/torch_bindings_generated6.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_reflection_pad3d_backward =
    foreign
      "atg_reflection_pad3d_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad3d_backward_grad_input =
    foreign
      "atg_reflection_pad3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad3d_out =
    foreign
      "atg_reflection_pad3d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_relu = foreign "atg_relu" (gc_tensor @-> returning raw_tensor)
  let stubs_relu6 = foreign "atg_relu6" (gc_tensor @-> returning raw_tensor)
  let stubs_relu6_ = foreign "atg_relu6_" (gc_tensor @-> returning raw_tensor)
  let stubs_relu_ = foreign "atg_relu_" (gc_tensor @-> returning raw_tensor)

  let stubs_relu_out =
    foreign "atg_relu_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_remainder =
    foreign "atg_remainder" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_remainder_ =
    foreign "atg_remainder_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_remainder_scalar_out =
    foreign
      "atg_remainder_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_remainder_scalar_tensor =
    foreign "atg_remainder_scalar_tensor" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_remainder_scalar_tensor_out =
    foreign
      "atg_remainder_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_remainder_tensor =
    foreign "atg_remainder_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_remainder_tensor_ =
    foreign "atg_remainder_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_remainder_tensor_out =
    foreign
      "atg_remainder_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_renorm =
    foreign
      "atg_renorm"
      (gc_tensor @-> scalar @-> int64_t @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_renorm_ =
    foreign
      "atg_renorm_"
      (gc_tensor @-> scalar @-> int64_t @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_renorm_out =
    foreign
      "atg_renorm_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> int64_t @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_repeat =
    foreign "atg_repeat" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_repeat_interleave =
    foreign
      "atg_repeat_interleave"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_repeat_interleave_self_int =
    foreign
      "atg_repeat_interleave_self_int"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_repeat_interleave_self_tensor =
    foreign
      "atg_repeat_interleave_self_tensor"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_repeat_interleave_tensor_out =
    foreign
      "atg_repeat_interleave_tensor_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_repeat_out =
    foreign
      "atg_repeat_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad1d =
    foreign
      "atg_replication_pad1d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad1d_backward =
    foreign
      "atg_replication_pad1d_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad1d_backward_grad_input =
    foreign
      "atg_replication_pad1d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_replication_pad1d_out =
    foreign
      "atg_replication_pad1d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad2d =
    foreign
      "atg_replication_pad2d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad2d_backward =
    foreign
      "atg_replication_pad2d_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad2d_backward_grad_input =
    foreign
      "atg_replication_pad2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_replication_pad2d_out =
    foreign
      "atg_replication_pad2d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad3d =
    foreign
      "atg_replication_pad3d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad3d_backward =
    foreign
      "atg_replication_pad3d_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_replication_pad3d_backward_grad_input =
    foreign
      "atg_replication_pad3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_replication_pad3d_out =
    foreign
      "atg_replication_pad3d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_requires_grad_ =
    foreign "atg_requires_grad_" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_reshape =
    foreign "atg_reshape" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reshape_as =
    foreign "atg_reshape_as" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize =
    foreign "atg_resize" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_resize_ =
    foreign "atg_resize_" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_resize_as =
    foreign "atg_resize_as" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize_as_ =
    foreign "atg_resize_as_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize_as_out =
    foreign
      "atg_resize_as_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize_as_sparse =
    foreign "atg_resize_as_sparse" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize_as_sparse_ =
    foreign "atg_resize_as_sparse_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize_as_sparse_out =
    foreign
      "atg_resize_as_sparse_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_resize_out =
    foreign
      "atg_resize_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_resolve_conj = foreign "atg_resolve_conj" (gc_tensor @-> returning raw_tensor)
  let stubs_resolve_neg = foreign "atg_resolve_neg" (gc_tensor @-> returning raw_tensor)
  let stubs_retains_grad = foreign "atg_retains_grad" (gc_tensor @-> returning bool)

  let stubs_rms_norm =
    foreign
      "atg_rms_norm"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_rnn_relu =
    foreign
      "atg_rnn_relu"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_rnn_relu_cell =
    foreign
      "atg_rnn_relu_cell"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_rnn_relu_data =
    foreign
      "atg_rnn_relu_data"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_rnn_tanh =
    foreign
      "atg_rnn_tanh"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_rnn_tanh_cell =
    foreign
      "atg_rnn_tanh_cell"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_rnn_tanh_data =
    foreign
      "atg_rnn_tanh_data"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_roll =
    foreign
      "atg_roll"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_roll_out =
    foreign
      "atg_roll_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_rot90 =
    foreign
      "atg_rot90"
      (gc_tensor @-> int64_t @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_rot90_out =
    foreign
      "atg_rot90_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_round = foreign "atg_round" (gc_tensor @-> returning raw_tensor)
  let stubs_round_ = foreign "atg_round_" (gc_tensor @-> returning raw_tensor)

  let stubs_round_decimals =
    foreign "atg_round_decimals" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_round_decimals_ =
    foreign "atg_round_decimals_" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_round_decimals_out =
    foreign
      "atg_round_decimals_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_round_out =
    foreign "atg_round_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_row_indices = foreign "atg_row_indices" (gc_tensor @-> returning raw_tensor)

  let stubs_row_indices_copy =
    foreign "atg_row_indices_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_row_indices_copy_out =
    foreign "atg_row_indices_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_row_stack =
    foreign "atg_row_stack" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_row_stack_out =
    foreign
      "atg_row_stack_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_rrelu =
    foreign "atg_rrelu" (gc_tensor @-> scalar @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_rrelu_ =
    foreign "atg_rrelu_" (gc_tensor @-> scalar @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_rrelu_with_noise =
    foreign
      "atg_rrelu_with_noise"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> int @-> returning raw_tensor)
  ;;
